# Nexora

./: .env.example  .gitignore  CLI_FEATURES.md  COMMUNITY_FEEDBACK_SYSTEM.md  COMMUNITY_GUIDELINES.md  DEMO.md  PHASE1_IMPLEMENTATION.md  PHASE1_SUMMARY.md  QUICK_START.md  README.md  clean_data.csv  docker-compose.yml  index.js  make_data.py  model1.nx  model2.nx  package-lock.json  package.json  pyproject.toml  render.yaml  setup.py  smoke_test.py  svg2png.js  test_data.csv
.devcontainer/: devcontainer.json
.github/workflows/: ci-frontend.yml  ci.yml  playwright.yml  security.yml
.nexora/: experiments.jsonl
backend/: .env.example  .gitignore  package-lock.json  package.json  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/middleware/: admin_auth_guard.py  user_auth_guard.py
backend/app/models/: admin.py  cyber_schemas.py  schemas.py  user.py
backend/app/routers/: admin_api_keys.py  admin_audit.py  admin_auth.py  admin_content.py  admin_datasets.py  (+12 more)
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/scripts/: create_admin.py  generate_avatars.py
backend/tests/: test_dataset_analyzer.py
docs/: features.html
examples/archive/: 20260626T082827Z_nexora_demo.ipynb
frontend/: .env.desktop  .env.example  .env.production  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
nexora/: __init__.py  config.py  core.py  experiments.py  intelligence.py  post_install.py  report.py  types.py
nexora/cli/: __init__.py  main.py  wizard.py
nexora/codegen/: __init__.py  docker_gen.py  fastapi_gen.py  flask_gen.py  mlflow_gen.py  notebook_gen.py  pipeline_gen.py  script.py  streamlit_gen.py
nexora/explainer/: __init__.py  llm_explainer.py  pdp.py  sensitivity.py  shap_explainer.py
nexora/export/: __init__.py  codegen.py
nexora/io/: __init__.py  loaders.py  remote.py  serializer.py  versioning.py
nexora/models/: __init__.py  registry.py  task_detector.py  trainer.py
nexora/monitor/: diagnostics.py  drift.py  performance.py
nexora/preprocessing/: __init__.py  pipeline_builder.py  text_processor.py
nexora/profiler/: __init__.py  dataset_profile.py
nexora/testing/: plugin.py
sample-data/: generate_sample_data.py
scripts/: archive_demo_files.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_core.py  test_explainer.py  test_full_system.py  test_llm_explainer.py  test_monitor.py  test_pdp_sensitivity.py  test_properties.py  test_remote.py  test_smoke.py  test_terminal_workflow.py
verify_env/: pyvenv.cfg
verify_env/Scripts/: activate  activate.bat
(+80 files in other folders)
