[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexora"
version = "0.1.0"
description = "Autonomous predictive analytics from CSV to trained model and runnable code."
readme = "README.md"
license = "MIT"
authors = [{ name = "Jeet Patel" }]
requires-python = ">=3.10"
keywords = ["automl", "machine-learning", "predictive-analytics", "data-science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2",
  "optuna>=3.0",
  "shap>=0.44",
  "imbalanced-learn>=0.11",
  "jinja2>=3.1",
  "click>=8.1",
  "rich>=13.0",
  "tqdm>=4.65",
  "joblib>=1.3",
  "pydantic>=2.0",
  "requests>=2.31",
  "pyarrow>=14.0",
  "openpyxl>=3.1",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "duckdb>=0.10.0",
  "evidently>=0.4.0",
  "huggingface_hub>=0.20.0",
  "gradio>=4.0.0",
  "marimo>=0.1.0",
  "sentence-transformers>=2.2.0",
  "umap-learn>=0.5.0",
  "dvc>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "hypothesis>=6.0.0",
  "twine>=4.0",
]
sql     = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9"]
mongo   = ["pymongo>=4.5"]
cloud   = ["boto3>=1.34", "gspread>=5.12"]
ui      = ["streamlit>=1.30"]
llm     = ["ollama>=0.1", "openai>=1.0"]
export  = ["weasyprint>=60.0", "nbformat>=5.9"]
all     = ["nexora[sql,mongo,cloud,ui,llm,export]"]

[project.entry-points."pytest11"]
nexora = "nexora.testing.plugin"

[project.scripts]
nexora = "nexora.cli.main:cli"

[project.urls]
Homepage = "https://nexoraprediction.netlify.app"
Repository = "https://github.com/jeet2005/Nexora"
Issues = "https://github.com/jeet2005/Nexora/issues"

[tool.setuptools.packages.find]
include = ["nexora*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
